--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!--﻿<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
   <title>Prakhar Biodata</title>
@@ -182,4 +182,4 @@ $('.person-pic').slick({
 </script>
 
 </body>
-</html>-->
+</html>
